5 more exercises added :)